# swig_issue_example

./: .gitignore  CMakeLists.txt  Foo.cc  Foo.h  FooTest.java  FooWrap.cc  FooWrap.h  README.md  foo.i  install_swig.sh  main.cpp  scalar.i  swig.sh
com/zhen/foo/: Bar.java  BarMap.java  Baz.java  Foo.java  FooModule.java  FooModuleJNI.java  NoWrapMap.java  SWIGTYPE_p_std__mapT_ScalarT_std__string_t_ScalarT_std__string_t_std__lessT_ScalarT_std__string_t_t_t__iterator.java  StdStringMap.java  WrapStringType.java
